opam-version: "2.0"
maintainer: "ygrek@autistici.org"
homepage: "https://github.com/ygrek/ocaml-extlib"
dev-repo: "git+https://github.com/ygrek/ocaml-extlib.git"
bug-reports: "https://github.com/ygrek/ocaml-extlib/issues"
doc: ["https://ygrek.org/p/extlib/doc/"]
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
authors: [
  "Nicolas Cannasse"
  "Brian Hurt"
  "Yamagata Yoriyuki"
  "Markus Mottl"
  "Jesse Guardiani"
  "John Skaller"
  "Bardur Arantsson"
  "Janne Hellsten"
  "Richard W.M. Jones"
  "ygrek"
  "Gabriel Scherer"
  "Pietro Abate"
]
depends: [
  "dune"
  "ocaml"
  "cppo" {build}
  "base-bytes"
]
synopsis:
  "A complete yet small extension for OCaml standard library"
description: """
The purpose of this library is to add new functions to OCaml standard library
modules, to modify some functions in order to get better performances or
safety (tail-recursive) and also to provide new modules which should be useful
for day to day programming.

Current goal is to maintain compatibility, new software is encouraged to not use extlib since stdlib
is now seeing many additions and improvements which make many parts of extlib obsolete.
For tail-recursion safety consider using other libraries e.g. containers.
"""
build: [[ "dune" "build" "-p" name ]]
